--- a/layouts/shortcodes/heatmap.html
+++ b/layouts/shortcodes/heatmap.html
@@ -125,7 +125,7 @@
 
     function createHeatmapKey(keyElement) {
         const keyTitle = document.createElement('h4');
-        keyTitle.textContent = 'Heatmap Key (10 = Best)';
+        keyTitle.textContent = 'Heatmap Key ( <-- 10 = Best  |  1 = Worst --> )';
         keyElement.appendChild(keyTitle);
 
         const keyGrid = document.createElement('div');
