--- a/layouts/shortcodes/admeds.html
+++ b/layouts/shortcodes/admeds.html
@@ -41,9 +41,9 @@
               type: 'Amphetamine (Short-acting)',
               color: 'rgb(34, 197, 94)',
               pathways: {
-                metabolism: ['norephedrine', 'p-hydroxyamphetamine'],
-                receptors: ['DAT (strong)', 'NET (strong)', '5-HT (weak)'],
-                effects: ['Focus', 'Alertness', 'Executive Function', 'Appetite Suppression', 'Mood Regulation'],
+                metabolism: ['dextroamphetamine', 'norephedrine', 'p-hydroxyamphetamine'],
+                receptors: ['DAT (strong)', 'NET (strong)', '5-HT (weak)', 'Alpha-adrenoreceptors'],
+                effects: ['Focus', 'Alertness', 'Executive Function', 'Appetite Suppression', 'Mood Regulation', 'Blood Pressure Regulation', 'Heart Rate Regulation'],
                 duration: ['4-6 hours']
               }
             },
@@ -53,8 +53,8 @@
               color: 'rgb(168, 85, 247)',
               pathways: {
                 metabolism: ['d-amphetamine', 'l-amphetamine', 'norephedrine'],
-                receptors: ['DAT (strong)', 'NET (strong)', '5-HT (weak)'],
-                effects: ['Focus', 'Alertness', 'Executive Function', 'Appetite Suppression', 'Mood Regulation'],
+                receptors: ['DAT (strong)', 'NET (strong)', '5-HT (weak)', 'Alpha-adrenoreceptors'],
+                effects: ['Focus', 'Alertness', 'Executive Function', 'Appetite Suppression', 'Mood Regulation', 'Blood Pressure Regulation', 'Heart Rate Regulation'],
                 duration: ['5-8 hours']
               }
             },
@@ -64,8 +64,8 @@
               color: 'rgb(239, 68, 68)',
               pathways: {
                 metabolism: ['p-hydroxymethylphenidate', 'ritalinic acid'],
-                receptors: ['DAT (strong)', 'NET (strong)'],
-                effects: ['Focus', 'Alertness', 'Executive Function', 'Appetite Suppression'],
+                receptors: ['DAT (strong)', 'NET (strong)', 'Alpha-adrenoreceptors'],
+                effects: ['Focus', 'Alertness', 'Executive Function', 'Appetite Suppression', 'Blood Pressure Regulation', 'Heart Rate Regulation'],
                 duration: ['2-4 hours']
               }
             },
@@ -75,19 +75,19 @@
               color: 'rgb(249, 115, 22)',
               pathways: {
                 metabolism: ['p-hydroxymethylphenidate', 'ritalinic acid'],
-                receptors: ['DAT (strong)', 'NET (strong)'],
-                effects: ['Focus', 'Alertness', 'Executive Function', 'Appetite Suppression'],
+                receptors: ['DAT (strong)', 'NET (strong)', 'Alpha-adrenoreceptors'],
+                effects: ['Focus', 'Alertness', 'Executive Function', 'Appetite Suppression', 'Blood Pressure Regulation', 'Heart Rate Regulation'],
                 duration: ['10-12 hours']
               }
             },
             {
               name: 'Vyvanse',
-              type: 'Amphetamine (Long-acting)',
+              type: 'CNS Stimulant (Long-acting)',
               color: 'rgb(59, 130, 246)',
               pathways: {
-                metabolism: ['l-lysine + dexamfetamine', 'norephedrine'],
-                receptors: ['DAT (strong)', 'NET (strong)', '5-HT (weak)'],
-                effects: ['Focus', 'Alertness', 'Executive Function', 'Appetite Suppression', 'Mood Regulation'],
+                metabolism: ['l-lysine', 'dextroamphetamine', 'norepinephrine'],
+                receptors: ['DAT (strong)', 'NET (strong)', '5-HT (weak)', 'Alpha-adrenoreceptors'],
+                effects: ['Focus', 'Alertness', 'Executive Function', 'Appetite Suppression', 'Mood Regulation', 'Blood Pressure Regulation', 'Heart Rate Regulation'],
                 duration: ['12-14 hours']
               }
             },
@@ -101,8 +101,7 @@
                 effects: ['Focus', 'Mood Regulation', 'Antidepressant'],
                 duration: ['6-14 hours']
               }
-            },
-
+            }
           ];
 
           // Get unique values for each column
