--- a/themes/hugo-admonitions/layouts/_default/_markup/render-blockquote-alert.html
+++ b/themes/hugo-admonitions/layouts/_default/_markup/render-blockquote-alert.html
@@ -8,20 +8,19 @@
 
 {{- /* Transpile Sass to CSS and render the link element once per page. */}}
 {{- if not (.Page.Store.Get "admonition-style-loaded-flag") }}
-  {{- with resources.Get "sass/vendors/_admonitions.scss" }}
+  {{- $sassFile := resources.Get "sass/vendors/_admonitions.scss" }}
+  {{- if $sassFile }}
     {{- $opts := dict
       "enableSourceMap" (not hugo.IsProduction)
       "outputStyle" (cond hugo.IsProduction "compressed" "expanded")
       "targetPath" "css/vendors/admonitions.css"
     }}
-    {{- with . | toCSS $opts }}
-      {{- if hugo.IsProduction }}
-        {{- with . | fingerprint }}
-          <link rel="stylesheet" href="{{ .RelPermalink }}" integrity="{{ .Data.Integrity }}" crossorigin="anonymous">
-        {{- end }}
-      {{- else }}
-        <link rel="stylesheet" href="{{ .RelPermalink }}">
-      {{- end }}
+    {{- $style := $sassFile | resources.ToCSS $opts }}
+    {{- if hugo.IsProduction }}
+      {{- $style = $style | resources.Fingerprint }}
+      <link rel="stylesheet" href="{{ $style.RelPermalink }}" integrity="{{ $style.Data.Integrity }}" crossorigin="anonymous">
+    {{- else }}
+      <link rel="stylesheet" href="{{ $style.RelPermalink }}">
     {{- end }}
   {{- end }}
   {{- .Page.Store.Set "admonition-style-loaded-flag" true }}
