--- a/layouts/shortcodes/cite.html
+++ b/layouts/shortcodes/cite.html
@@ -1,4 +1,5 @@
 {{ $key := .Get 0 }}
-<span class="citation" id="citation-{{ $key }}">
-  <a href="#ref-{{ $key }}" class="citation-link">({{ $key }})</a>
+<span class="margin-toggle sidenote-number"></span>
+<span class="sidenote" id="citation-{{ $key }}">
+  <a href="#ref-{{ $key }}" class="citation-link">[{{ $key }}]</a>
 </span>
