--- a/layouts/shortcodes/mermaid.html
+++ b/layouts/shortcodes/mermaid.html
@@ -1,4 +1,4 @@
 <pre class="mermaid">
     {{- .Inner | safeHTML }}
 </pre>
-{{- .Page.Scratch.SetInMap "this" "mermaid" true -}}
+{{- .Page.Store.Set "hasMermaid" true -}}
