--- a/layouts/shortcodes/contact.html
+++ b/layouts/shortcodes/contact.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="/css/contact-form.css">
+
 <form method="post" action="https://forms.un-static.com/forms/b3a094319063b3a8e52fe0e175dd796ace8b8624">
   <div class="form-group row">
     <label for="name" class="col-4 col-form-label">Name</label>
