--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -136,8 +136,7 @@
 {{- /* Misc */}}
 {{- if hugo.IsProduction | or (eq site.Params.env "production") }}
 {{- template "_internal/google_analytics.html" . }}
-{{- /* Temporarily removing templates that require the missing get-page-images partial */}}
-{{- /* template "partials/templates/opengraph.html" . */}}
-{{- /* template "partials/templates/twitter_cards.html" . */}}
-{{- /* template "partials/templates/schema_json.html" . */}}
+{{- template "partials/templates/opengraph.html" . }}
+{{- template "partials/templates/twitter_cards.html" . }}
+{{- template "partials/templates/schema_json.html" . }}
 {{- end -}}
