--- a/layouts/partials/comparison-table.html
+++ b/layouts/partials/comparison-table.html
@@ -5,8 +5,9 @@
     <thead>
       <tr>
         <th class="feature-column"></th>
-        {{ range $data.tools }}
-          <th>{{ .name }}</th>
+        {{ range $tool := $data.tools }}
+          {{ $headerHighlight := $tool.header_highlight | default 0 }}
+          <th class="tool-avg-{{ $headerHighlight }}">{{ $tool.name }}</th>
         {{ end }}
       </tr>
     </thead>
@@ -23,8 +24,11 @@
             {{ range $tool := $data.tools }}
               {{ $value := index $feature $tool.id }}
               {{ $highlightKey := printf "%s_highlight" $tool.id }}
-              {{ $highlightLevel := index $feature $highlightKey | default 0 }}
-              <td{{ if gt $highlightLevel 0 }} class="highlight-{{ $highlightLevel }}"{{ end }}>
+              {{ $highlightLevel := index $feature $highlightKey }}
+              {{ if eq $highlightLevel nil }}
+                {{ $highlightLevel = 0 }}
+              {{ end }}
+              <td class="highlight-{{ $highlightLevel }}">
                 {{ $value }}
               </td>
             {{ end }}
